--- a/style.css
+++ b/style.css
@@ -1,33 +1,50 @@
 * {background-color:#21407B;
-margin:0;
-padding:0;}
-nav {box-shadow: 0 0 35px -10px rgb(152, 7, 89);
-  position: fixed;
-  left: 0;
-  right: 0;
-  align-items: center;
-  color: white;
-  display: flex;
-  height: 95px;
-  padding: 12px;
-  display: flex;
-  justify-content: space-between;
-}
+  margin:0;
+  padding:0;}
+
+nav {box-shadow: 0 0 35px -5px rgb(152, 7, 89);
+    position: fixed;
+    left: 0;
+    right: 0;
+    align-items: center;
+    color: white;
+    display: flex;
+    height: 95px;
+    padding: 12px;
+    display: flex;
+    justify-content: space-between;}
+
 #nav-links {display: block;
 font-family:Arial, Helvetica, sans-serif;
 font-size: x-large;}
-a {text-decoration: none;
-color:rgb(251, 207, 234);}
-#logo {width: 200px;
-height:95px;}
-#home {padding-top: 150px;
-color:rgb(251, 207, 234);
-text-wrap: wrap;
-margin: right 100px;
-display:inline-flexbox;}
-#homehead {display:inline-flexbox
-width: 80px;
-height: 500px;
-float: right}
 
-.coloumn {width:100%}
+a {text-decoration: none;
+  color:rgb(251, 207, 234);
+  margin:10px;}
+
+#logo {width: 200px;
+      height: 95px;}
+
+#home {padding-top: 200px;
+      color:rgb(251, 207, 234);
+      text-wrap: wrap;
+       margin-left: 180px;
+       margin-top: 205px;
+      display:inline-flexbox;}
+
+img {height: 600px;
+     float:left;
+     border-radius:10px;}
+
+.column {float:left;
+width:40%;
+box-sizing:border-box;
+margin-top:120px /*60px 0 80px*/;
+text-align: center;
+font-size:x-large;}
+
+ p {width:400px;
+    margin-left:100px;}
+
+h1 {font-family:fantasy; font-weight: lighter;}
+h2 {margin:10px;font-size: 50px;color:#D838E8}
